[package]
name = "x11_raise_by_name"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.9"
log = "0.4"
x11rb = { version = "0.10", features = ["xfixes"] }
